Add Province-Country model and some query examples.